// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|ProposalStep.proposals connection fetches proposals with most points associated to a collect step with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aTo4O2k6MTtpOjE0ODU5MDUxNjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjYiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:26:00",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
            "published": true,
            "publishedAt": "2017-02-01 00:26:00",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 8,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTo3O2k6MTtpOjE0ODU5MDM3NzAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjUiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:50",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNQ==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:50",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 7,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YTozOntpOjA7aTo3O2k6MTtpOjE0ODU5MDM3NzAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjUiO30=",
        "hasNextPage": true,
      },
      "totalCount": 6,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches proposals with most votes associated to a collect step with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aTozO2k6MTtpOjE0ODU5MDUxNjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjYiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:26:00",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
            "published": true,
            "publishedAt": "2017-02-01 00:26:00",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 8,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTozO2k6MTtpOjE0ODU5MDM3NzAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjUiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:50",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNQ==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:50",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 7,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YTozOntpOjA7aTozO2k6MTtpOjE0ODU5MDM3NzAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjUiO30=",
        "hasNextPage": true,
      },
      "totalCount": 6,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep and a category "Aménagement" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep and a district "Beauregard" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep and a status "Soumis au vote" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:04:00",
            "district": Object {
              "id": "district4",
              "name": "Beaulieu",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "published": true,
            "publishedAt": "2017-02-01 00:04:00",
            "status": null,
            "votes": Object {
              "totalCount": 47,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep with paginated commentables after cursor with exact count 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQ2",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyMA==",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQxOQ==",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
                "hasNextPage": true,
                "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
              },
              "totalCount": 19,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep with paginated commentables after cursor with less commentables than count 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQ2",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyMA==",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
                "hasNextPage": true,
                "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
              },
              "totalCount": 19,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep with paginated commentables after cursor with more commentables than count 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQ2",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyMA==",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQxOQ==",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQxOA==",
                  },
                },
                Object {
                  "node": Object {
                    "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQxNw==",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
                "hasNextPage": true,
                "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
              },
              "totalCount": 19,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "comments": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step and a status "En cours" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTA1MTYwMDAwO2k6MTtzOjEwOiJwcm9wb3NhbDI2Ijt9",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:26:00",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
            "published": true,
            "publishedAt": "2017-02-01 00:26:00",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 8,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODIxMDAwO2k6MTtzOjExOiJwcm9wb3NhbDEzOSI7fQ==",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:41",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMzk=",
            "published": true,
            "publishedAt": "2017-02-01 00:03:41",
            "status": null,
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODIxMDAwO2k6MTtzOjExOiJwcm9wb3NhbDEzOSI7fQ==",
        "hasNextPage": true,
      },
      "totalCount": 6,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor ordered by comments count ASC 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDUxNjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjYiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:26:00",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
            "published": true,
            "publishedAt": "2017-02-01 00:26:00",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 8,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM4MjEwMDA7aToyO3M6MTE6InByb3Bvc2FsMTM5Ijt9",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:41",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMzk=",
            "published": true,
            "publishedAt": "2017-02-01 00:03:41",
            "status": null,
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM4MjEwMDA7aToyO3M6MTQ6InByb3Bvc2FsMTM5YmlzIjt9",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:41",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMzliaXM=",
            "published": true,
            "publishedAt": "2017-02-01 00:03:41",
            "status": null,
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM4MjAwMDA7aToyO3M6MTE6InByb3Bvc2FsMTM4Ijt9",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:40",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMzg=",
            "published": true,
            "publishedAt": "2017-02-01 00:03:40",
            "status": null,
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3NzAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjUiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:50",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNQ==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:50",
            "status": null,
            "votes": Object {
              "totalCount": 3,
              "totalPointsCount": 7,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3NjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjQiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:40",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNA==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:40",
            "status": null,
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 1,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3NjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjQiO30=",
        "hasNextPage": false,
      },
      "totalCount": 6,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor ordered by comments count DESC 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToyMDtpOjE7aToxNDg1OTM2NDgwMDAwO2k6MjtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM4NDAwMDA7aToyO3M6OToicHJvcG9zYWwzIjt9",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:04:00",
            "district": Object {
              "id": "district4",
              "name": "Beaulieu",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "published": true,
            "publishedAt": "2017-02-01 00:04:00",
            "status": null,
            "votes": Object {
              "totalCount": 47,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3ODAwMDA7aToyO3M6OToicHJvcG9zYWwyIjt9",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3ODAwMDA7aToyO3M6OToicHJvcG9zYWwyIjt9",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor ordered by old published 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
            "votes": Object {
              "totalCount": 0,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:04:00",
            "district": Object {
              "id": "district4",
              "name": "Beaulieu",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "published": true,
            "publishedAt": "2017-02-01 00:04:00",
            "status": null,
            "votes": Object {
              "totalCount": 47,
              "totalPointsCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a question collect step with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAyMDAwO2k6MTtzOjk6InF1ZXN0aW9uMiI7fQ==",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:00:02",
            "district": null,
            "id": "UHJvcG9zYWw6cXVlc3Rpb24y",
            "published": true,
            "publishedAt": "2017-02-01 00:00:02",
            "status": Object {
              "id": "status2",
              "name": "Approuvé",
            },
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 1,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAxMDAwO2k6MTtzOjk6InF1ZXN0aW9uMSI7fQ==",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 10,
            },
            "createdAt": "2017-02-01 00:00:01",
            "district": null,
            "id": "UHJvcG9zYWw6cXVlc3Rpb24x",
            "published": true,
            "publishedAt": "2017-02-01 00:00:01",
            "status": Object {
              "id": "status2",
              "name": "Approuvé",
            },
            "votes": Object {
              "totalCount": 1,
              "totalPointsCount": 2,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAxMDAwO2k6MTtzOjk6InF1ZXN0aW9uMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 2,
    },
  },
}
`;
